--- a/templates/studentTable.html
+++ b/templates/studentTable.html
@@ -6,10 +6,11 @@
             <th> Name</th>
             <th> Grade</th>
             <th> Address</th>
+            <th> Operation</th>
         </tr>
         <tr ng-repeat="student in students | filter:searchText.value" ng-class="{'striped': $even}" ng-click="edit(student)">
-            <td ng-repeat="prop in student">{{prop}}</td>
-            <td> <button class="btn btn-danger btn-sm" ng-click="delete(student)">Delete</button></td>
+            <td ng-repeat="prop in student">{{prop | uppercase}}</td>
+            <td> <button class="btn btn-danger btn-sm" ng-click="remove(student)">Delete</button></td>
         </tr>
         </thead>
     </table>
