--- a/templates/studentInfo.html
+++ b/templates/studentInfo.html
@@ -6,5 +6,8 @@
     </div>
 
     <ng-include src="viewUrl"></ng-include>
+    <!-- addStudent.html-->
+    <!-- searchStudent.html-->
 
+    <button class="btn btn-info btn-sm" ng-click="toDataBase()">save</button>
 </div>
