--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -13,4 +13,6 @@
     </div>
 </div>
 
-<ng-include src="'templates/studentTable.html'"></ng-include>
+<!--<ng-include src="'templates/studentTable.html'"></ng-include>-->
+
+<stu-table students="students" filter-text="{{searchText.value}}" edit-student="edit" ></stu-table>
