--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -15,4 +15,4 @@
 
 <!--<ng-include src="'templates/studentTable.html'"></ng-include>-->
 
-<stu-table students="students" filter-text="{{searchText.value}}" edit-student="edit" ></stu-table>
+<stu-table students="students" filter-text="{{searchText.value}}" edit-student="edit"  abc="searchText.value" ></stu-table>
